--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.2"
+    buildToolsVersion "28.0.3"
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 27
@@ -21,12 +21,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.facebook.react:react-native:+'
-    compile 'com.google.android.exoplayer:exoplayer:2.9.4'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.4'
 }
